# g1_armteach

./: MUJOCO_LOG.TXT  readme_zh.md  test.act
simulate_python/: config.py  unitree_mujoco.py  unitree_mujoco_pd.py
simulate_python/test/: gamepad_test.py
unitree_sdk2_python/example/g1/high_level/: arm7_get_joints.py  g1_arm7_sdk_dds_armteach.py
unitree_sdk2_python/example/g1/high_level/armteach/: pyproject.toml
unitree_sdk2_python/example/g1/high_level/armteach/armteach/: __init__.py  action_logger.py  action_replay.py
unitree_sdk2_python/example/g1/high_level/armteach/armteach.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unitree_sdk2_python/example/g1/low_level/: g1_low_level_example.py
